--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -69,7 +69,52 @@
   }
 
   &-label {
-    @include font-style-stack(16px, 20px, 300, normal);
+    @include font-style-stack(19px, 25px, 300, normal);
+    margin-right: 10px;
     display: inline-block;
+  }
+}
+
+#results-block {
+  margin-top: 60px;
+}
+
+.data-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 30px;
+
+  &__heading-l {
+    @include font-style-stack(36px, 40px);
+    color: govuk-colour("white");
+  }
+
+  &__body-l {
+    @include font-style-stack(19px, 24px, 300);
+    color: govuk-colour("white");
+  }
+
+  &__button-group {
+    justify-content: center;
+  }
+}
+
+.filter {
+  &-heading {
+    @include font-style-stack(24px, 30px);
+  }
+
+  &-options-label {
+    @include font-style-stack(19px, 25px, 300);
+  }
+
+  &-button {
+    @include font-style-stack(19px, 25px, 300);
+    display: block;
+  }
+
+  &-reset {
+    @include font-style-stack(19px, 25px, 300);
+    color: $gov-defra-color-websafe !important;
   }
 }
