--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -33,9 +33,7 @@
 
   {%if searchInputError === undefined %}
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third">
-        <p>&nbsp;</p>
-      </div>
+      <div class="govuk-grid-column-one-third" id="filter-block" data-action="{{getFiltersPath}}" data-fetch-filters></div>
       <div class="govuk-grid-column-two-thirds" id="results-block" data-action="{{getResultsPath}}" data-fetch-results>
         <p class="govuk-caption-m govuk-!-font-size-14">Your search request is being served...</p>
       </div>
