308875 - Change in the stlyes

--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -7,7 +7,7 @@
 
 {% if not hasError %}
   <div class='govuk-section-break--visible'>
-    <h2 class='govuk-heading-m results-stats'>
+    <h2 class='govuk-heading-m results-stats govuk-!-margin-bottom-4'>
       {{searchResults.total}} results{% if not searchResults.total %} found {% endif %}
     </h2>
 
