--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -1,7 +1,7 @@
 {% from 'govuk/components/select/macro.njk' import govukSelect %}
 {% from 'govuk/components/button/macro.njk' import govukButton %}
 
-<h2 class='govuk-heading-m filter-heading govuk-section-break--visible govuk-!-padding-bottom-2'>
+<h2 class='govuk-heading-m filter-heading govuk-section-break--visible govuk-!-padding-bottom-2 govuk-!-margin-bottom-2'>
   Filters
 </h2>
 
