feat: Results per page component at results page

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -54,7 +54,7 @@
 .option {
   &-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.8fr 1.4fr;
     gap: 10px;
   }
 
@@ -71,5 +71,11 @@
   &-label {
     @include font-style-stack(19px, 25px, 300, normal);
     display: inline-block;
+  }
+
+  &-items {
+    @include font-style-stack(19px, 25px, 300, normal);
+    min-width: auto;
+    width: 80px;
   }
 }
