--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -1,3 +1,7 @@
+.make-full-screen {
+  max-width: 97% !important;
+}
+
 .quick_search-container {
   &__heading-m {
     @include font-style-stack(24px, 30px);
