--- a/src/views/layout/template.njk
+++ b/src/views/layout/template.njk
@@ -21,7 +21,7 @@
 {% block header %}
   <header class="header-container">
     <div class="header-div-container header-main">
-      <div class="site-width-container {% if makeFullScreen %} make-full-screen {% endif %}">
+      <div class="site-width-container">
         <div class="header-logo-container"><img alt="Department for Environment Food &amp; Rural Affairs Logo" src="{{ assetPath }}/images/defra_logo.svg" width="52" height="42" decoding="async" data-nimg="1" class="defra-logo" loading="lazy" style="color:transparent">
           <a target="_blank" class="header-logo-link logo-link" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">
             <span class="defra-logo-text">Department for Environment <br> Food &amp; Rural Affairs</span></a>
@@ -30,10 +30,6 @@
     </div>
   </header>
 {% endblock %}
-
-{% if makeFullScreen %}
-  {% set containerClasses = "make-full-screen" %}
-{% endif %}
 
 {% set mainClasses = "app-main-class" %}
 
