--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -1,4 +1,4 @@
-{% extends "layout/template.njk" %}
+{% extends "layout/default.njk" %}
 
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "partials/data_questionnaire/macro.njk" import dateQuestionnaire %}
