308875 - Fixed all isues during the guided search journey

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7578,6 +7578,10 @@
   padding-bottom: 10px;
 }
 
+.govuk-breadcrumbs__list .govuk-breadcrumbs__list-item:last-child a {
+  text-decoration: none;
+}
+
 .full-width-banner {
   width: 100%;
   background-color: #008938;
