--- a/src/assets/sass/templates/_layout.scss
+++ b/src/assets/sass/templates/_layout.scss
@@ -2,3 +2,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+.govuk-breadcrumbs__list .govuk-breadcrumbs__list-item:last-child a {
+  text-decoration: none;
+}
