--- a/src/views/screens/results/no_results.njk
+++ b/src/views/screens/results/no_results.njk
@@ -22,7 +22,7 @@
         {% if not isQuickSearchJourney %}
           <div class="govuk-button-group">
             {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary", attributes: {
-              onclick: 'history.back()'
+              'data-do-previous-page': ''
             } }) }}
             {{ govukButton({ text: "Restart questionnaire search", classes: "govuk-button--secondary", href: routes.guidedSearch, attributes: {
               'data-do-storage-reset': ''
