--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -13,10 +13,12 @@
     {% for item in searchResults.items %}
       <div class='govuk-section-break--visible search-result__item'>
         <h2 class='govuk-heading-m search-result__heading'>{{item.title}}</h2>
-        <div class='search-result__parameter'>
-          <span class='search-result__parameter-label search-result__published-label'>Published by</span>
-          <span class='search-result__parameter-value search-result__published-value'>{{item.publishedBy}}</span>
-        </div>
+        {% if item.publishedBy %}
+          <div class='search-result__parameter'>
+            <span class='search-result__parameter-label search-result__published-label'>Published by</span>
+            <span class='search-result__parameter-value search-result__published-value'>{{item.publishedBy}}</span>
+          </div>
+        {% endif %}
         {% if item.temporalExtentDetails.startDate or item.temporalExtentDetails.endDate %}
           <div class='search-result__parameter'>
             <span class='search-result__parameter-label search-result__study-label'>Study period</span>
