fix: PR comments

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -79,6 +79,9 @@
     width: 80px;
   }
 }
+.govuk-pagination{
+  margin-top: 20px;
+}
 .govuk-pagination__item--current{
   background-color: #00703C;
 }
