--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7853,6 +7853,10 @@
   width: 80px;
 }
 
+.govuk-pagination {
+  margin-top: 20px;
+}
+
 .govuk-pagination__item--current {
   background-color: #00703C;
 }
