311821 - initial set of changes with API, unit test case and default tab view

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -112,7 +112,8 @@
 
           {{ govukButton({
             text: 'More info',
-            classes: 'govuk-button--secondary'
+            classes: 'govuk-button--secondary',
+            href: routes.searchResults + '/' + item.id
           }) }}
         </div>
       </div>
