--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7989,3 +7989,18 @@
   padding: 5px 1px 5px 5px;
   margin: 0;
 }
+
+.open-data-block--disabled {
+  padding-left: 15px;
+  border-left: 5px solid #d4351c;
+  margin-bottom: 25px;
+}
+.open-data-block--tag {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px;
+  color: #d4351c;
+  display: block;
+}
