--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -79,17 +79,11 @@
             <span class='search-result__parameter-value search-result__published-value'>{{item.publishedBy}}</span>
           </div>
         {% endif %}
-        {% if item.temporalExtentDetails.startDate or item.temporalExtentDetails.endDate %}
+        {% if item.studyPeriod %}
           <div class='search-result__parameter'>
             <span class='search-result__parameter-label search-result__study-label'>Study period</span>
             <span class='search-result__parameter-value search-result__study-value'>
-              {% if item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
-                {{item.temporalExtentDetails.startDate | date('DD MMM YYYY')}} to {{item.temporalExtentDetails.endDate | date('DD MMM YYYY')}}
-              {% elif item.temporalExtentDetails.startDate and not item.temporalExtentDetails.endDate %}
-                {{item.temporalExtentDetails.startDate | date('DD MMM YYYY')}}
-              {% elif not item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
-                {{item.temporalExtentDetails.endDate | date('DD MMM YYYY')}}
-              {% endif %}
+              {{item.studyPeriod}}
             </span>
           </div>
         {% endif %}
