--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -39,7 +39,7 @@
 
 {% block content %}
   {% if docDetails !== undefined and docDetails.title %}
-    {% set generalHTML = details({options: detailsTabOptions.general, docDetails: docDetails}) %}
+    {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
 
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
