--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -40,6 +40,7 @@
 {% block content %}
   {% if docDetails !== undefined and docDetails.title %}
     {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
+    {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
 
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
