--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -1,5 +1,6 @@
 {% extends 'layout/default.njk' %}
 
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from 'govuk/components/breadcrumbs/macro.njk' import govukBreadcrumbs %}
 {% from 'govuk/components/tabs/macro.njk' import govukTabs %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
@@ -42,6 +43,15 @@
     {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
 
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
+
+    {% if docDetails !== undefined and docDetails.alternateTitle %}
+      {{ govukDetails({
+        summaryText: "Alternate title (additional business name or alternative language)",
+        text: docDetails.alternateTitle,
+        open: "true",
+        classes: "details-alt_title"
+      }) }}
+    {% endif %}
 
     <div {% if not docDetails.resourceLocator %} class="open-data-block--disabled" {% endif %}>
       {{ openData({ resourceLocator: docDetails.resourceLocator, isDetailsPage: true }) }}
