--- a/src/assets/sass/templates/_details.scss
+++ b/src/assets/sass/templates/_details.scss
@@ -68,3 +68,23 @@
   @include font-style-stack(16px, 20px, 300);
   color: $govuk-link-colour !important;
 }
+
+.details-table {
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 8px 0;
+    text-align: left;
+    vertical-align: top;
+  }
+
+  th {
+    padding-top: 0;
+  }
+
+  thead tr,
+  tbody tr {
+    border-bottom: 1px solid $govuk-border-colour;
+  }
+}
