--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -44,6 +44,7 @@
     {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
     {% set qualityHtml = details({options: detailsTabOptions.quality, hasData: docDetails.title}) %}
     {% set governanceHtml = details({options: detailsTabOptions.governance, hasData: docDetails.title}) %}
+    {% set geographyHtml = details({options: detailsTabOptions.geography, hasData: docDetails.title}) %}
 
     <h1 class='govuk-heading-m details-title'>{{docDetails.title}}</h1>
 
@@ -128,6 +129,9 @@
 
 {% block bodyEnd %}
   {{ super() }}
+  <script>
+    var coordinate = {{ docDetails.geographicBoundary | json_encode | safe }};
+  </script>
   <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
 {% endblock %}
