--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -3,9 +3,9 @@
 {% if params.options and params.hasData %}
   <div class='tab-content-container'>
     {% for option in params.options %}
-      {% if option.label and option.label !== 'map' %}
+      {% if option.label %}
         <div class='tab-content-row'>
-          <h2 class='tab-content-label'>{{option.label | safe}}</h2>
+          <h2 class='tab-content-label'>{{option.label | safe }}</h2>
           {% if option.displayValue %}
             <span class='tab-content-value'>
               {{option.displayValue | safe}}
@@ -17,9 +17,6 @@
             })}}
           {% endif %}
         </div>
-      {% endif %}
-      {% if option.label and option.label === 'map' %}
-        <div id="coordinate-map" style="height: 335px;"></div>
       {% endif %}
     {% endfor %}
   </div>
