347554 - Fixing the styles

--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -19,7 +19,7 @@
         </div>
       {% endif %}
       {% if option.label and option.label === 'map' %}
-        <div id="coordinate-map" style="height: 335px;"></div>
+        <div id="coordinate-map" class="detail-map" style="height: 335px;"></div>
       {% endif %}
     {% endfor %}
   </div>
