--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -19,7 +19,37 @@
 {% endblock %}
 
 {% block header %}
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id= {{gtmId}}"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header class="header-container">
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','{{gtmId}}');</script>
+<!-- End Google Tag Manager -->
+
+<!--Will be removed once Defra GA accounts been created -->
+
+<!-- Google tag (gtag.js) -->
+{# <script async src="https://www.googletagmanager.com/gtag/js?id=G-0FDPPSVB0H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0FDPPSVB0H');
+
+  gtag('event', 'screen_view', {
+        'app_name': 'myAppName',
+        'screen_name': 'Home sashdjk'
+      });
+
+</script> #}
+
     <div class="header-div-container header-main">
       <div class="site-width-container">
         <div class="header-logo-container"><img alt="Department for Environment Food &amp; Rural Affairs Logo" src="{{ assetPath }}/images/defra_logo.svg" width="52" height="42" decoding="async" data-nimg="1" class="defra-logo" loading="lazy" style="color:transparent">
