354233 - view result on map initial layout

--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -27,6 +27,7 @@
   &__form {
     position: relative;
     width: 630px;
+    margin-bottom: 20px;
   }
 
   @media screen and (max-width: 799px) {
