--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7467,6 +7467,7 @@
 .search-block__form {
   position: relative;
   width: 630px;
+  margin-bottom: 20px;
 }
 @media screen and (max-width: 799px) {
   .search-block__form {
@@ -7556,16 +7557,29 @@
 }
 
 .modal {
+  display: none;
+  position: fixed;
+  overflow: auto;
+  z-index: 1000;
+}
+
+.resource-modal {
+  z-index: 1002;
   background-color: #505a5f;
   padding: 40px 20px;
-  overflow: auto;
-  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1000;
   width: 600px;
-  display: none;
+}
+
+.map-modal {
+  background-color: #ffffff;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 #overlay.active,
@@ -7809,7 +7823,6 @@
 .search-result__content {
   margin: 0;
   color: #0b0c0c;
-  font-family: "GDS Transport", arial, sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 300;
@@ -7833,6 +7846,7 @@
   display: grid;
   grid-template-columns: 0.9fr 1.4fr;
   gap: 10px;
+  margin-top: 15px;
 }
 .option-group {
   margin-bottom: 20px;
@@ -7860,10 +7874,6 @@
   line-height: 25px;
   min-width: auto;
   width: 80px;
-}
-
-#results-block {
-  margin-top: 50px;
 }
 
 .data-container {
@@ -7934,6 +7944,108 @@
 
 .govuk-pagination__item--current:hover {
   background-color: #00703c;
+}
+
+.govuk-button--map {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  height: 45px;
+  display: inline-flex;
+  min-height: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.map-view-block {
+  width: 80%;
+  height: 100vh;
+}
+
+.filter-view-block {
+  width: 20%;
+}
+
+.ol-zoom {
+  top: calc(100% - 2.9em - 2.75em) !important;
+  left: calc(100% - 1.5em - 1.375em) !important;
+}
+
+.defra-exit-control {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #0b0c0c;
+  padding: 15px 20px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
+
+.defra-controls {
+  color: transparent !important;
+  background-size: cover;
+  width: 2em !important;
+  height: 2em !important;
+  border-color: transparent !important;
+  border-radius: 0px !important;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+.defra-zoom-in {
+  background-image: url(/assets/images/zoom-in-icon.svg);
+}
+
+.defra-zoom-out {
+  background-image: url(/assets/images/zoom-out-icon.svg);
+}
+
+.defra-refresh-block {
+  bottom: 100px;
+  right: 13px;
+  display: none;
+}
+.defra-refresh-control {
+  background-image: url(/assets/images/refresh-icon.svg);
+}
+
+.govuk-checkboxes__input {
+  width: 26px;
+  height: 26px;
+  margin-left: 2px;
+  margin-top: 5px;
+}
+
+.defra-checkboxes {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
+}
+.defra-checkboxes__label {
+  display: flex;
+  align-items: center;
+}
+.defra-checkboxes__label::before {
+  top: 5px;
+  width: 28px;
+  height: 28px;
+}
+.defra-checkboxes__label::after {
+  top: 12px;
+  left: 7px;
+  width: 19px;
+  border-width: 0 0 4px 4px;
+  height: 10px;
 }
 
 .details-title {
