--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -11,16 +11,29 @@
 }
 
 .modal {
+  display: none;
+  position: fixed;
+  overflow: auto;
+  z-index: 1000;
+}
+
+.resource-modal {
+  z-index: 1002;
   background-color: govuk-colour("dark-grey");
   padding: 40px 20px;
-  overflow: auto;
-  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1000;
   width: 600px;
-  display: none;
+}
+
+.map-modal {
+  background-color: govuk-colour("white");
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 #overlay.active,
