--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -35,7 +35,7 @@
   &__content {
     margin: 0;
     color: $govuk-text-colour;
-    @include font-style-stack(16px, 20px, 300, normal, true);
+    @include font-style-stack(16px, 20px, 300);
 
     &--empty {
       @include font-style-stack(19px, 25px, 300, normal, true);
@@ -56,6 +56,7 @@
     display: grid;
     grid-template-columns: 0.9fr 1.4fr;
     gap: 10px;
+    margin-top: 15px;
   }
 
   &-group {
@@ -79,10 +80,6 @@
     min-width: auto;
     width: 80px;
   }
-}
-
-#results-block {
-  margin-top: 50px;
 }
 
 .data-container {
@@ -138,4 +135,103 @@
 }
 .govuk-pagination__item--current:hover {
   background-color: #00703c;
+}
+
+.govuk-button {
+  &--map {
+    @include font-style-stack(24px, 32px, 700);
+    height: 45px;
+    display: inline-flex;
+    min-height: auto;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.map-view-block {
+  width: 80%;
+  height: 100vh;
+}
+
+.filter-view-block {
+  width: 20%;
+}
+
+.ol-zoom {
+  top: calc(100% - 2.9em - 2.75em) !important;
+  left: calc(100% - 1.5em - 1.375em) !important;
+}
+
+.defra-exit-control {
+  @include font-style-stack(24px, 32px, 300, normal, true);
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background-color: govuk-colour("white");
+  text-decoration: none;
+  color: govuk-colour("black");
+  padding: 15px 20px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
+
+.defra-controls {
+  color: transparent !important;
+  background-size: cover;
+  width: 2em !important;
+  height: 2em !important;
+  border-color: transparent !important;
+  border-radius: 0px !important;
+  background-color: govuk-colour("white");
+  cursor: pointer;
+}
+
+.defra-zoom-in {
+  background-image: url(/assets/images/zoom-in-icon.svg);
+}
+
+.defra-zoom-out {
+  background-image: url(/assets/images/zoom-out-icon.svg);
+}
+
+.defra-refresh {
+  &-block {
+    bottom: 100px;
+    right: 13px;
+    display: none;
+  }
+
+  &-control {
+    background-image: url(/assets/images/refresh-icon.svg);
+  }
+}
+
+.govuk-checkboxes__input {
+  width: 26px;
+  height: 26px;
+  margin-left: 2px;
+  margin-top: 5px;
+}
+
+.defra-checkboxes {
+  @include font-style-stack(16px, 20px, 300);
+  &__label {
+    display: flex;
+    align-items: center;
+
+    &::before {
+      top: 5px;
+      width: 28px;
+      height: 28px;
+    }
+
+    &::after {
+      top: 12px;
+      left: 7px;
+      width: 19px;
+      border-width: 0 0 4px 4px;
+      height: 10px;
+    }
+  }
 }
