--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7823,6 +7823,7 @@
 .search-result__content {
   margin: 0;
   color: #0b0c0c;
+  font-family: "GDS Transport", arial, sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 300;
